<h2>ScreenCloud 1.5.2 (2020-10-20)</h2>
<ul>
	<li>Wayland support</li>
	<li>Add ability to make an existing ScreenCloud process perform actions (e.g capture screenshots) from the command line</li>
	<li>Add new tool to editor: cursor tool</li>
</ul>
<br/>
<h2>ScreenCloud 1.5.1 (2019-01-11)</h2>
<ul>
	<li>New 'blur/pixelize' tool in screenshot editor</li>
	<li>Minor tweaks to editor GUI</li>
</ul>
<br/>
<h2>ScreenCloud 1.5.0 (2019-06-30)</h2>
<ul>
	<li>Add support for Python 3.7</li>
	<li>Fix corrupted screenshot error on Linux</li>
	<li>Update to Python 3.7 on Windows</li>
	<li>Fix icon color on dark menu bar on Mac OS</li>
	<li>Replace pycrypto with ssh2-python</li>
</ul>
<br/>
<h2>ScreenCloud 1.4.0 (2018-08-10)</h2>
<ul>
	<li>Remove built-in uploader for screencloud.net</li>
	<li>Add editor hint in "Save As" dialog</li>
</ul>
<br/>
<h2>ScreenCloud 1.3.0 (2016-08-15)</h2>
<ul>
	<li>Codebase updates, now using Qt 5 on Windows, Mac and recent Linux distributions</li>
	<li>Update to Python 3 on Windows</li>
	<li>Bug fixes (audio playback, etc)</li>
</ul>
<br/>
<h2>ScreenCloud 1.2.0 (2015-02-15)</h2>
<ul>
	<li>Added screenshot editor</li>
	<li>Fixed audio output sometimes crashing the application</li>
</ul>
<br/>
<h2>ScreenCloud 1.1.6 (2014-05-02)</h2>
<ul>
	<li>Fixed plugin list not loading (url has changed)</li>
	<li>Made more strings translatable</li>
	<li>Fixed "run on startup" not working on Mac OS X</li>
</ul>
<br/>
<h2>ScreenCloud 1.1.5 (2014-03-30)</h2>
<ul>
	<li>Fixed plugin update check</li>
	<li>Better Reitina support on Mac OS X</li>
	<li>Added changelog button to update notification</li>
	<li>Fixed R6034 error and Python crashes on Windows</li>
</ul>
