@@ -1,4 +1,4 @@
 <response>
-	<current_version>1.5.2</current_version>
+	<current_version>1.5.3</current_version>
 	<outdated></outdated>
 </response>
