@@ -54,9 +54,9 @@
                 <hr />
                 <br />
                 <section class="download-bars">
-                    <a class="download-button" href="https://github.com/olav-st/screencloud/releases/download/v1.5.2/ScreenCloud-v1.5.2-x86_64.AppImage">Linux<span>AppImage</span></a>
-                    <a class="download-button" href="https://github.com/olav-st/screencloud/releases/download/v1.5.2/ScreenCloud-1.5.2-x86.msi">Windows<span>Installer</span></a>
-                    <a class="download-button" href="https://github.com/olav-st/screencloud/releases/download/v1.5.2/ScreenCloud-v1.5.2.dmg">Mac OS X<span>Disk Image</span></a>
+                    <a class="download-button" href="https://github.com/olav-st/screencloud/releases/download/v1.5.3/ScreenCloud-v1.5.3-x86_64.AppImage">Linux<span>AppImage</span></a>
+                    <a class="download-button" href="https://github.com/olav-st/screencloud/releases/download/v1.5.3/ScreenCloud-1.5.3-x86.msi">Windows<span>Installer</span></a>
+                    <a class="download-button" href="https://github.com/olav-st/screencloud/releases/download/v1.5.3/ScreenCloud-v1.5.3.dmg">Mac OS X<span>Disk Image</span></a>
                     <i>Trouble downloading?</i>
                     <ul>
                         <li><a href="https://snapcraft.io/screencloud" class="official-dl">Download from Snap Store (Linux)</a></li>
